--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 main {
-    margin-bottom: 250px;
+    margin-bottom: 216px;
 }
 
 footer.footer {
@@ -47,5 +47,34 @@ footer.footer {
 
 p {
     font-family: $font-family-serif;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.text-justify {
+    text-align: left;
+}
+
+.image-card{
+    position:relative;
+    &:hover{
+        .titre-image{
+            opacity: 1;
+        }
+        img{
+            filter: brightness(0.3);
+        }
+    }
+
+    img{
+        transition: all 0.3s;
+    }
+
+    .titre-image{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: all 0.3s;
+    }
 }
