--- a/scss/main.css
+++ b/scss/main.css
@@ -11972,7 +11972,7 @@ html {
 }
 
 main {
-  margin-bottom: 216px;
+  margin-bottom: 250px;
 }
 
 footer.footer {
@@ -11984,6 +11984,7 @@ footer.footer {
 
 .hero-scene {
   position: relative;
+  margin-bottom: 15px;
 }
 .hero-scene::before {
   content: "";
@@ -12000,7 +12001,7 @@ footer.footer {
   position: relative;
 }
 .hero-scene .hero-scene-content {
-  height: 250px;
+  height: 180px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12035,4 +12036,149 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+/* CSS menu*/
+.pdej-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f4f4;
+  padding: 10px;
+}
+
+.Entrées {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+}
+
+.dej-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f4f4;
+  padding: 10px;
+}
+
+.Déjeuner {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+}
+
+.din-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f4f4;
+  padding: 10px;
+}
+
+.Dinner {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+}
+
+.vin-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f4f4;
+  padding: 10px;
+}
+
+.Vins {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+}
+
+h3.menu-title, .menu-title.h3 {
+  text-align: center;
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+h3, .h3, h5, .h5, p {
+  margin: 10px 0;
+}
+
+h3, .h3 {
+  font-family: "Hind Madurai", serif;
+  font-size: 2em;
+  color: #906427;
+}
+
+h4, .h4 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  color: #392C1E;
+  font-weight: bold;
+}
+
+h5, .h5 {
+  font-size: 20px;
+}
+
+h6, .h6 {
+  font-size: 16px;
+}
+
+.highlight {
+  font-family: "Hind Madurai", serif;
+  color: #B6AC97;
+  font-style: italic;
+}
+
+.special {
+  font-family: "Hind Madurai", serif;
+  color: #906427;
+  font-weight: bold;
+}
+
+p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+/*connection*/
+.form-label {
+  color: #906427;
+}
+
+.connection-container {
+  margin-left: 20%;
+  margin-bottom: 30px;
+  margin-right: 20%;
 }/*# sourceMappingURL=main.css.map */
