--- a/scss/main.css
+++ b/scss/main.css
@@ -11972,7 +11972,7 @@ html {
 }
 
 main {
-  margin-bottom: 250px;
+  margin-bottom: 260px;
 }
 
 footer.footer {
@@ -12020,11 +12020,9 @@ p {
 .image-card {
   position: relative;
 }
-.image-card:hover .titre-image {
+.image-card:hover .titre-image,
+.image-card:hover .action-image-buttons {
   opacity: 1;
-}
-.image-card:hover img {
-  filter: brightness(0.3);
 }
 .image-card img {
   transition: all 0.3s;
@@ -12034,6 +12032,17 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s;
+}
+.image-card .action-image-buttons {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
   opacity: 0;
   transition: all 0.3s;
 }
@@ -12181,4 +12190,11 @@ p {
   margin-left: 20%;
   margin-bottom: 30px;
   margin-right: 20%;
+}
+
+/*reservation*/
+.allreservations a {
+  display: block;
+  color: #292222;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
