--- a/scss/main.scss
+++ b/scss/main.scss
@@ -246,3 +246,70 @@ p{
 
     }
 }
+
+#loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 9999;
+    transition: opacity 0.5s ease-out;
+  }
+
+  #loader-animation {
+    animation: animate 1.5s linear infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    height: 80px;
+    width: 80px;
+    position: relative;
+    color: $secondary;
+  }
+
+  @keyframes animate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(220deg);
+    }
+  }
+
+  #loader-animation:after {
+    animation: animate2 1.5s ease-in-out infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    content: '';
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    position: absolute;
+  }
+
+  @keyframes animate2 {
+    0% {
+      box-shadow: inset #fff 0 0 0 17px;
+      transform: rotate(-140deg);
+    }
+    50% {
+      box-shadow: inset #fff 0 0 0 2px;
+    }
+    100% {
+      box-shadow: inset #fff 0 0 0 17px;
+      transform: rotate(140deg);
+    }
+  }
+
+  #loader-text {
+    margin-top: 20px;
+    font-weight: 200;
+    opacity: 1;
+    font-family: sans-serif;
+    color: $secondary;
+    font-size: 1.2em;
+    transition: opacity 0.5s ease-out;
+  }
